--- a/HongMouer.CloudPlatform/Views/Home/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/Home/Index.cshtml
@@ -158,8 +158,8 @@
         <!--底部信息-->
         <div class="layui-footer okadmin-text-center">
             Copyright ©2018-©2020 ok-admin v2.0 All Rights Reserved
-            <button class="layui-btn layui-btn-danger layui-btn-xs donate">捐赠作者</button>
-            <button class="layui-btn layui-btn-danger layui-btn-xs communication">QQ群交流</button>
+            @*<button class="layui-btn layui-btn-danger layui-btn-xs donate">捐赠作者</button>
+            <button class="layui-btn layui-btn-danger layui-btn-xs communication">QQ群交流</button>*@
         </div>
     </div>
 
