--- a/HongMouer.CloudPlatform/Views/UserManage/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/UserManage/Index.cshtml
@@ -1,32 +1,36 @@
+﻿
+@{
+    Layout = null;
+}
+
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>用户列表</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="../../css/oksub.css">
-	<script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+    <meta charset="utf-8">
+    <title>用户列表</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="../../css/oksub.css">
+    <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
 </head>
 <body>
-<div class="ok-body">
-	<!--模糊搜索区域-->
-	<div class="layui-row">
-		<form class="layui-form layui-col-md12 ok-search">
-			<input class="layui-input" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
-			<input class="layui-input" placeholder="截止日期" autocomplete="off" id="endTime" name="endTime">
-			<input class="layui-input" placeholder="账号" autocomplete="off" name="username">
-			<button class="layui-btn" lay-submit="" lay-filter="search">
-				<i class="layui-icon">&#xe615;</i>
-			</button>
-		</form>
-	</div>
-	<!--数据表格-->
-	<table class="layui-hide" id="tableId" lay-filter="tableFilter"></table>
-</div>
-<!--js逻辑-->
-<script src="../../lib/layui/layui.js"></script>
-<script>
-	layui.use(["element", "jquery", "table", "form", "laydate", "okLayer", "okUtils", "okMock"], function () {
+    <div class="ok-body">
+        <!--模糊搜索区域-->
+        <div class="layui-row">
+            <form class="layui-form layui-col-md12 ok-search">
+                <input class="layui-input" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
+                <input class="layui-input" placeholder="截止日期" autocomplete="off" id="endTime" name="endTime">
+                <input class="layui-input" placeholder="账号" autocomplete="off" name="username">
+                <button class="layui-btn" lay-submit="" lay-filter="search">
+                    <i class="layui-icon">&#xe615;</i>
+                </button>
+            </form>
+        </div>
+        <!--数据表格-->
+        <table class="layui-hide" id="tableId" lay-filter="tableFilter"></table>
+    </div>
+    <!--js逻辑-->
+    <script src="../../lib/layui/layui.js"></script>
+    <script>layui.use(["element", "jquery", "table", "form", "laydate", "okLayer", "okUtils", "okMock"], function () {
 		let table = layui.table;
 		let form = layui.form;
 		let laydate = layui.laydate;
@@ -176,36 +180,36 @@
 				});
 			})
 		}
-	})
-</script>
-<!-- 头工具栏模板 -->
-<script type="text/html" id="toolbarTpl">
-	<div class="layui-btn-container">
-		<button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="batchEnabled">批量启用</button>
-		<button class="layui-btn layui-btn-sm layui-btn-warm" lay-event="batchDisabled">批量停用</button>
-		<button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="batchDel">批量删除</button>
-		<button class="layui-btn layui-btn-sm" lay-event="add">添加用户</button>
-	</div>
-</script>
-<!-- 行工具栏模板 -->
-<script type="text/html" id="operationTpl">
-	<a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-	<a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
-</script>
-<!-- 启用|停用模板 -->
-<script type="text/html" id="statusTpl">
-	{{#  if(d.status == 0){ }}
-	<span class="layui-btn layui-btn-normal layui-btn-xs">已启用</span>
-	{{#  } else if(d.status == 1) { }}
-	<span class="layui-btn layui-btn-warm layui-btn-xs">已停用</span>
-	{{#  } }}
-</script>
-<script type="text/html" id="roleTpl">
-	{{#  if(d.role == 0){ }}
-	<span class="layui-btn layui-btn-normal layui-btn-xs">超级会员</span>
-	{{#  } else if(d.role == 1) { }}
-	<span class="layui-btn layui-btn-warm layui-btn-xs">普通用户</span>
-	{{#  } }}
-</script>
+	})</script>
+    <!-- 头工具栏模板 -->
+    <script type="text/html" id="toolbarTpl">
+        <div class="layui-btn-container">
+            <button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="batchEnabled">批量启用</button>
+            <button class="layui-btn layui-btn-sm layui-btn-warm" lay-event="batchDisabled">批量停用</button>
+            <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="batchDel">批量删除</button>
+            <button class="layui-btn layui-btn-sm" lay-event="add">添加用户</button>
+        </div>
+    </script>
+    <!-- 行工具栏模板 -->
+    <script type="text/html" id="operationTpl">
+        <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+        <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+    </script>
+    <!-- 启用|停用模板 -->
+    <script type="text/html" id="statusTpl">
+        {{#  if(d.status == 0){ }}
+        <span class="layui-btn layui-btn-normal layui-btn-xs">已启用</span>
+        {{#  } else if(d.status == 1) { }}
+        <span class="layui-btn layui-btn-warm layui-btn-xs">已停用</span>
+        {{#  } }}
+    </script>
+    <script type="text/html" id="roleTpl">
+        {{#  if(d.role == 0){ }}
+        <span class="layui-btn layui-btn-normal layui-btn-xs">超级会员</span>
+        {{#  } else if(d.role == 1) { }}
+        <span class="layui-btn layui-btn-warm layui-btn-xs">普通用户</span>
+        {{#  } }}
+    </script>
 </body>
 </html>
+
