--- a/HongMouer.CloudPlatform/Views/Login/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/Login/Index.cshtml
@@ -8,11 +8,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>首页 - 光年(Light Year Admin V4)后台管理系统模板</title>
+    <title>首页 - HongMouer.CloudPlatform</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
-    <meta name="keywords" content="LightYear,LightYearAdmin,光年,后台模板,后台管理系统,光年HTML模板">
-    <meta name="description" content="Light Year Admin V4是一个后台管理系统的HTML模板，基于Bootstrap v4.4.1。">
-    <meta name="author" content="yinqi">
     <link href="~/login/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/login/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="~/login/css/style.min.css" rel="stylesheet">
@@ -26,7 +23,7 @@
                 <div class="p-5 align-self-end">
                     <img src="~/login/images/logo.png" alt="...">
                     <br><br><br>
-                    <p class="text-white">Light Year Admin V4是一个后台管理系统的HTML模板，基于Bootstrap v4.4.1。</p>
+                            <p class="text-white">HongMouer.CloudPlatform</p>
                 </div>
             </div>
 
@@ -61,7 +58,7 @@
                         <button class="btn btn-block btn-primary" type="button" id="btnOk">立即登录</button>
                     </div>
                 </form>
-                <p class="text-center text-muted mt-3">Copyright © 2020 <a href="http://lyear.itshubao.com">IT书包</a>. All right reserved</p>
+                <p class="text-center text-muted mt-3">Copyright © 2020 <a href="http://www.HongMouer.com">HongMouer.CloudPlatform</a>. All right reserved</p>
             </div>
         </div>
     </div>
