--- a/HongMouer.CloudPlatform/Views/Home/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/Home/Index.cshtml
@@ -8,8 +8,6 @@
     <meta charset="utf-8">
     <title>ok-admin v2.0 | 很赞的后台模版</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="keywords" content="ok-admin v2.0,ok-admin网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-    <meta name="description" content="ok-admin v2.0，顾名思义，很赞的后台模版，它是一款基于Layui框架的轻量级扁平化且完全免费开源的网站后台管理系统模板，适合中小型CMS后台系统。">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="~/pages/css/okadmin.css">
     <link rel="stylesheet" href="~/pages/lib/loading/okLoading.css" />
@@ -110,9 +108,9 @@
                 <!--左侧导航菜单-->
                 <ul id="navBar" class="layui-nav okadmin-nav okadmin-bg-20222A layui-nav-tree">
                     <li class="layui-nav-item layui-this">
-                        <a href="javascript:" lay-id="1" data-url="pages/console.html">
+                        <a href="javascript:" lay-id="1" data-url="~/Dashboard/Index">
                             <i is-close=false class="ok-icon">&#xe654;</i>
-                            控制台
+                            主页
                         </a>
                     </li>
                 </ul>
@@ -142,13 +140,13 @@
                 <ul id="tabTitle" class="layui-tab-title ok-tab-title not-scroll">
                     <li class="layui-this" lay-id="1" tab="index">
                         <i class="ok-icon">&#xe654;</i>
-                        <cite is-close=false>控制台</cite>
+                        <cite is-close=false>主页</cite>
                     </li>
                 </ul>
 
                 <div id="tabContent" class="layui-tab-content ok-tab-content">
                     <div class="layui-tab-item layui-show">
-                        <iframe src='pages/console.html' frameborder="0" scrolling="yes" width="100%"
+                        <iframe src='~/Dashboard/Index' frameborder="0" scrolling="yes" width="100%"
                                 height="100%"></iframe>
                     </div>
                 </div>
@@ -156,11 +154,11 @@
         </div>
 
         <!--底部信息-->
-        <div class="layui-footer okadmin-text-center">
+        <!--<div class="layui-footer okadmin-text-center">
             Copyright ©2018-©2020 ok-admin v2.0 All Rights Reserved
             <button class="layui-btn layui-btn-danger layui-btn-xs donate">捐赠作者</button>
             <button class="layui-btn layui-btn-danger layui-btn-xs communication">QQ群交流</button>
-        </div>
+        </div>-->
     </div>
 
     <!-- 锁屏 -->
