--- a/HongMouer.CloudPlatform/Views/Login/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/Login/Index.cshtml
@@ -8,11 +8,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>首页 - HongMouer.CloudPlatform</title>
+    <title>HongMouer.CloudPlatform</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
-    <link href="~/login/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/login/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="~/login/css/style.min.css" rel="stylesheet">
+    <link href="~/login/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/login/css/materialdesignicons.min.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/login/css/style.min.css" rel="stylesheet" asp-append-version="true">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="~/login/js/jquery.min.js"></script>
+    <script type="text/javascript" src="~/login/js/jquery.min.js" asp-append-version="true"></script>
     <script type="text/javascript">;</script>
     <script type="text/javascript">
     $(document).ready(function(){
