--- a/HongMouer.CloudPlatform/Views/Dashboard/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/Dashboard/Index.cshtml
@@ -7,19 +7,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ok-admin v2.0 | 很赞的后台模版</title>
+    <title>HongMouer.CloudPlatform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="keywords" content="ok-admin v2.0,ok-admin网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-    <meta name="description" content="ok-admin v2.0，顾名思义，很赞的后台模版，它是一款基于Layui框架的轻量级扁平化且完全免费开源的网站后台管理系统模板，适合中小型CMS后台系统。">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="~/pages/css/oksub.css" media="all" />
-    <script type="text/javascript" src="~/pages/lib/loading/okLoading.js"></script>
-    <script type="text/javascript" src="~/pages/lib/echarts/echarts.min.js"></script>
-    <script type="text/javascript" src="~/pages/lib/echarts/echarts.themez.js"></script>
+    <link rel="stylesheet" href="~/pages/css/oksub.css" media="all"  asp-append-version="true"/>
+    <script type="text/javascript" src="~/pages/lib/loading/okLoading.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/pages/lib/echarts/echarts.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/pages/lib/echarts/echarts.themez.js" asp-append-version="true"></script>
 </head>
 <body class="console console1 ok-body-scroll">
     <div class="ok-body home">
@@ -132,8 +130,8 @@
     </div>
 </body>
 </html>
-<script type="text/javascript" src="~/pages/lib/layui/layui.js"></script>
-<script type="text/javascript" src="~/pages/js/console1.js"></script>
+<script type="text/javascript" src="~/pages/lib/layui/layui.js" asp-append-version="true"></script>
+<script type="text/javascript" src="~/pages/js/console1.js" asp-append-version="true"></script>
 
 
 
