--- a/HongMouer.CloudPlatform/Views/Home/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/Home/Index.cshtml
@@ -6,13 +6,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ok-admin v2.0 | 很赞的后台模版</title>
+    <title>HongMouer.CloudPlatform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="~/pages/css/okadmin.css">
-    <link rel="stylesheet" href="~/pages/lib/loading/okLoading.css" />
-    <script type="text/javascript" src="~/pages/js/okconfig.js"></script>
-    <script type="text/javascript" src="~/pages/lib/loading/okLoading.js"></script>
+    <link rel="stylesheet" href="~/pages/css/okadmin.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/pages/lib/loading/okLoading.css"  asp-append-version="true"/>
+    <script type="text/javascript" src="~/pages/js/okconfig.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/pages/lib/loading/okLoading.js" asp-append-version="true"></script>
 </head>
 <body class="layui-layout-body">
     <!-- 更换主体 Eg:orange_theme|blue_theme -->
@@ -98,7 +98,7 @@
         <!--左侧导航区域-->
         <div class="layui-side layui-side-menu okadmin-bg-20222A ok-left">
             <div class="layui-side-scroll okadmin-side">
-                <div class="okadmin-logo">ok-admin v2.0</div>
+                <div class="okadmin-logo">HongMouer.CloudPlatform</div>
                 <div class="user-photo">
                     <a class="img" title="我的头像">
                         <img src="~/pages/images/avatar.png" class="userAvatar">
@@ -223,9 +223,9 @@
         </div>
     </div>
     <!--js逻辑-->
-    <script src="~/pages/lib/layui/layui.js"></script>
-    <script src="~/pages/js/snowflake.js?snowflake=雪花"></script>
-    <script src="~/pages/js/okadmin.js"></script>
+    <script src="~/pages/lib/layui/layui.js" asp-append-version="true"></script>
+    <script src="~/pages/js/snowflake.js?snowflake=雪花" asp-append-version="true"></script>
+    <script src="~/pages/js/okadmin.js" asp-append-version="true"></script>
 </body>
 </html>
 
