--- a/HongMouer.CloudPlatform/Views/RoleManage/Index.cshtml
+++ b/HongMouer.CloudPlatform/Views/RoleManage/Index.cshtml
@@ -9,8 +9,8 @@
     <meta charset="UTF-8">
     <title>角色列表</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../css/oksub.css">
-    <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+    <link href="~/pages/css/oksub.css" rel="stylesheet"  asp-append-version="true"/>
+    <script src="~/pages/lib/loading/okLoading.js" asp-append-version="true"></script>
 </head>
 <body>
     <div class="ok-body">
@@ -19,7 +19,7 @@
             <form class="layui-form layui-col-md12 ok-search">
                 <input class="layui-input" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
                 <input class="layui-input" placeholder="截止日期" autocomplete="off" id="endTime" name="endTime">
-                <input class="layui-input" placeholder="请输入角色名" autocomplete="off" name="name">
+                <input class="layui-input" placeholder="角色名称" autocomplete="off" name="name">
                 <button class="layui-btn" lay-submit="" lay-filter="search">
                     <i class="layui-icon layui-icon-search"></i>
                 </button>
@@ -29,108 +29,111 @@
         <table class="layui-hide" id="tableId" lay-filter="tableFilter"></table>
     </div>
     <!--js逻辑-->
-    <script src="../../lib/layui/layui.js"></script>
-    <script>layui.use(["element", "table", "form", "laydate", "okLayer", "okUtils", "okMock"], function () {
-		let table = layui.table;
-		let form = layui.form;
-		let laydate = layui.laydate;
-		let okLayer = layui.okLayer;
-		let okUtils = layui.okUtils;
-		let okMock = layui.okMock;
-		okLoading.close();
-		laydate.render({elem: "#startTime", type: "datetime"});
-		laydate.render({elem: "#endTime", type: "datetime"});
+    <script src="~/pages/lib/layui/layui.js" asp-append-version="true"></script>
+    <script>
+        layui.use(["element", "table", "form", "laydate", "okLayer", "okUtils", "okMock"], function () {
+            let table = layui.table;
+            let form = layui.form;
+            let laydate = layui.laydate;
+            let okLayer = layui.okLayer;
+            let okUtils = layui.okUtils;
+            let okMock = layui.okMock;
 
-		let roleTable = table.render({
-			elem: "#tableId",
-			url: okMock.api.listRole,
-			limit: 10,
-			page: true,
-			toolbar: "#toolbarTpl",
-			size: "sm",
-			cols: [[
-				{type: "checkbox"},
-				{field: "id", title: "ID", width: 170, sort: true},
-				{field: "name", title: "角色名", width: 100},
-				{field: "remarks", title: "备注", width: 100},
-				{field: "createUsername", title: "创建者", width: 85},
-				{field: "status", title: "状态", width: 85, templet: "#statusTpl"},
-				{field: "createTime", title: "创建时间", width: 150},
-				{title: "操作", width: 80, align: "center", templet: "#operationTpl"}
-			]],
-			done: function (res, curr, count) {
-				console.log(res, curr, count);
-			}
-		});
+            okLoading.close();
 
-		form.on("submit(search)", function (data) {
-			roleTable.reload({
-				where: data.field,
-				page: {curr: 1}
-			});
-			console.log("0000")
-			return false;
-		});
+            laydate.render({ elem: "#startTime", type: "datetime" });
+            laydate.render({ elem: "#endTime", type: "datetime" });
 
-		table.on("toolbar(tableFilter)", function (obj) {
-			switch (obj.event) {
-				case "add":
-					add();
-					break;
-				case "batchDel":
-					batchDel();
-					break;
-			}
-		});
+            let roleTable = table.render({
+                elem: "#tableId",
+                url: okMock.api.listRole,
+                limit: 10,
+                page: true,
+                toolbar: "#toolbarTpl",
+                size: "sm",
+                cols: [[
+                    { type: "checkbox" },
+                    { field: "id", title: "ID", sort: true, width: 200 },
+                    { field: "name", title: "角色名" },
+                    { field: "remarks", title: "备注" },
+                    { field: "createUsername", title: "创建者" },
+                    { field: "status", title: "状态", templet: "#statusTpl" },
+                    { field: "createTime", title: "创建时间", width: 150 },
+                    { title: "操作", width: 80, align: "center", templet: "#operationTpl" }
+                ]],
+                done: function (res, curr, count) {
+                    console.log(res, curr, count);
+                }
+            });
 
-		table.on("tool(tableFilter)", function (obj) {
-			let data = obj.data;
-			switch (obj.event) {
-				case "edit":
-					edit(data.id);
-					break;
-				case "del":
-					del(data.id);
-					break;
-			}
-		});
+            form.on("submit(search)", function (data) {
+                roleTable.reload({
+                    where: data.field,
+                    page: { curr: 1 }
+                });
+                return false;
+            });
 
-		function add() {
-			okLayer.open("添加角色", "role-add.html", "90%", "90%", null, function () {
-				roleTable.reload();
-			})
-		}
+            table.on("toolbar(tableFilter)", function (obj) {
+                switch (obj.event) {
+                    case "add":
+                        add();
+                        break;
+                    case "batchDel":
+                        batchDel();
+                        break;
+                }
+            });
 
-		function batchDel() {
-			okLayer.confirm("确定要批量删除吗？", function (index) {
-				layer.close(index);
-				let idsStr = okUtils.tableBatchCheck(table);
-				if (idsStr) {
-					okUtils.ajax("/role/deleteRole", "delete", {idsStr: idsStr}, true).done(function (response) {
-						okUtils.tableSuccessMsg(response.msg);
-					}).fail(function (error) {
-						console.log(error)
-					});
-				}
-			});
-		}
+            table.on("tool(tableFilter)", function (obj) {
+                let data = obj.data;
+                switch (obj.event) {
+                    case "edit":
+                        edit(data.id);
+                        break;
+                    case "del":
+                        del(data.id);
+                        break;
+                }
+            });
 
-		function edit(id) {
-			okLayer.open("编辑角色", "role-edit.html?id=" + id, "90%", "90%", null, function () {
-				roleTable.reload();
-			})
-		}
+            function add() {
+                okLayer.open("添加角色", "role-insert.html", "90%", "90%", null, function () {
+                    roleTable.reload();
+                })
+            }
 
-		function del(id) {
-			okLayer.confirm("确定要删除吗？", function () {
-				okUtils.ajax("/role/deleteRole", "delete", {idsStr: id}, true).done(function (response) {
-					okUtils.tableSuccessMsg(response.msg);
-				}).fail(function (error) {
-					console.log(error)
-				});
-			})
-		}
-	})</script>
+            function batchDel() {
+                okLayer.confirm("确定要批量删除吗？", function (index) {
+                    layer.close(index);
+                    let idsStr = okUtils.tableBatchCheck(table);
+                    if (idsStr) {
+                        okUtils.ajax("/role/deleteRole", "delete", { idsStr: idsStr }, true).done(function (response) {
+                            okUtils.tableSuccessMsg(response.msg);
+                        }).fail(function (error) {
+                            console.log(error)
+                        });
+                    }
+                });
+            }
+
+            function edit(id) {
+                okLayer.open("编辑角色", "role-update.html?id=" + id, "90%", "90%", null, function () {
+                    roleTable.reload();
+                })
+            }
+
+            function del(id) {
+                okLayer.confirm("确定要删除吗？", function () {
+                    okUtils.ajax("/role/deleteRole", "delete", { idsStr: id }, true).done(function (response) {
+                        okUtils.tableSuccessMsg(response.msg);
+                    }).fail(function (error) {
+                        console.log(error)
+                    });
+                })
+            }
+        })
+    </script>
     <!-- 头工具栏模板 -->
     <script type="text/html" id="toolbarTpl">
         <div class="layui-btn-container">
@@ -155,4 +158,5 @@
     </script>
 </body>
 </html>
+
 
